--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -36,7 +36,7 @@ jobs:
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add last_playlist_track.txt
+          git add last_check_timestamp.txt
           if git diff --cached --quiet; then
             echo "No changes to commit."
           else
