--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -2,7 +2,7 @@ name: Hourly Playlist Monitor
 
 on:
   schedule:
-    - cron: "*/10 * * * *"  # Every hour at minute 0
+    - cron: "0 * * * *"  # Every hour at minute 0
   workflow_dispatch:  # Allow manual triggering
 
 permissions:
